# hubeau-data

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.helix/: languages.toml
examples/: demo.ipynb  demo.py
examples/hydrometrie/: demo_hydrometrie_client.ipynb
examples/qualite_rivieres/: demo_qualite_rivieres.ipynb
scripts/eau_potable/: check_health.py
scripts/ecoulement/: check_health.py
scripts/hydrobiologie/: check_health.py
scripts/hydrometrie/: check_health.py
scripts/phytopharmaceutiques/: check_health.py
scripts/piezometrie/: check_health.py
scripts/poisson/: check_health.py
scripts/prelevements/: check_health.py
scripts/qualite_nappes/: check_health.py
scripts/qualite_rivieres/: analyze_time_series.py  api_utils.py  check_health.py  check_undocumented_fields.py  explore.py  inspect_models.py
scripts/temperature/: check_health.py
src/hubeau_data/: __init__.py  async_base.py  async_client.py  base.py  client.py  retry.py  utils.py
src/hubeau_data/api/: async_eau_potable.py  async_ecoulement.py  async_hydrobiologie.py  async_hydrometrie.py  async_phytopharmaceutiques.py  async_piezometrie.py  async_poisson.py  async_prelevements.py  async_qualite_nappes.py  async_qualite_rivieres.py  async_temperature.py  eau_potable.py  ecoulement.py  hydrobiologie.py  hydrometrie.py  phytopharmaceutiques.py  piezometrie.py  poisson.py  prelevements.py  qualite_nappes.py  qualite_rivieres.py  temperature.py
src/hubeau_data/models/: eau_potable.py  ecoulement.py  health.py  hydrobiologie.py  hydrometrie.py  pagination.py  phytopharmaceutiques.py  piezometrie.py  poisson.py  prelevements.py  qualite_nappes.py  qualite_rivieres.py  temperature.py
tests/: test_async_apis.py  test_async_hydrometrie.py  test_eau_potable.py  test_ecoulement.py  test_hydrobiologie.py  test_hydrometrie.py  test_phytopharmaceutiques.py  test_piezometrie.py  test_poisson.py  test_prelevements.py  test_qualite_nappes.py  test_qualite_rivieres.py  test_retry.py  test_temperature.py
