[project]
name = "hubeau-data"
version = "0.0.1"
description = "Pythonic, typed, modern client for the Hubeau water data APIs."
authors = [{ name = "Pierre Feilles", email = "pierre.feilles@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "matplotlib>=3.10.3",
    "geopandas>=1.0.1",
    "shapely>=2.1.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11.10",
    "mypy>=1.10.0",
    "notebook>=7.2.0",
    "jupyter>=1.1.1",
    "ipython>=8.24",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
    "types-tabulate>=0.9.0.20241207",
    "pytest-httpx>=0.36.2",
]

[tool.poetry]
packages = [{ include = "hubeau_data", from = "src" }]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "live: Real API integration tests that interact with external networks",
]
