[project]
name = "hubeau-data"
version = "0.0.1"
description = "Pythonic, typed, modern client for the Hubeau water data APIs."
authors = [{ name = "Pierre Feilles", email = "pierre.feilles@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["hubeau", "water", "hydrology", "france", "open-data", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.7.0",
    "tenacity>=9.1.4",
]

[project.urls]
Homepage = "https://github.com/pfei/hubeau-data"
Repository = "https://github.com/pfei/hubeau-data"
Changelog = "https://github.com/pfei/hubeau-data/blob/main/CHANGELOG.md"
